--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Log-in{% endblock %}
 {% block content %}
+
     <h1>Log-in</h1>
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
@@ -8,6 +9,14 @@
         <p>Please, use the following form to log-in: If you don't have an account <a href="{% url 'register' %}">register here</a></p>
     {% endif %}
  
+    <div class="social">
+        <ul>
+            <li class="facebook">
+                <a href="{% url 'social:begin' 'facebook' %}">Sign in with Facebook</a>
+            </li>
+        </ul>
+   </div>
+   
     <div class="login-form">
         <form action="{% url 'login' %}" method="post">
             {{ form.as_p }}
