--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -14,9 +14,18 @@
             <li class="facebook">
                 <a href="{% url 'social:begin' 'facebook' %}">Sign in with Facebook</a>
             </li>
+
+            <li class="twitter">
+                <a href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a>
+            </li>
+
+            <li class="google">
+                <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
+            </li>
+               
         </ul>
    </div>
-   
+
     <div class="login-form">
         <form action="{% url 'login' %}" method="post">
             {{ form.as_p }}
